; ModuleID = '/home/carl/AnghaBench/lede/package/libs/libnl-tiny/src/extr_handlers.c_nl_cb_err.c'
source_filename = "/home/carl/AnghaBench/lede/package/libs/libnl-tiny/src/extr_handlers.c_nl_cb_err.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nl_cb = type { i8*, i32 }

@NL_CB_KIND_MAX = common dso_local global i32 0, align 4
@NLE_RANGE = common dso_local global i32 0, align 4
@NL_CB_CUSTOM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nl_cb_err(%struct.nl_cb* %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.nl_cb*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  store %struct.nl_cb* %0, %struct.nl_cb** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %10 = load i32, i32* %7, align 4
  %11 = icmp ult i32 %10, 0
  br i1 %11, label %16, label %12

12:                                               ; preds = %4
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* @NL_CB_KIND_MAX, align 4
  %15 = icmp ugt i32 %13, %14
  br i1 %15, label %16, label %19

16:                                               ; preds = %12, %4
  %17 = load i32, i32* @NLE_RANGE, align 4
  %18 = sub nsw i32 0, %17
  store i32 %18, i32* %5, align 4
  br label %31

19:                                               ; preds = %12
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* @NL_CB_CUSTOM, align 4
  %22 = icmp eq i32 %20, %21
  br i1 %22, label %23, label %30

23:                                               ; preds = %19
  %24 = load i32, i32* %8, align 4
  %25 = load %struct.nl_cb*, %struct.nl_cb** %6, align 8
  %26 = getelementptr inbounds %struct.nl_cb, %struct.nl_cb* %25, i32 0, i32 1
  store i32 %24, i32* %26, align 8
  %27 = load i8*, i8** %9, align 8
  %28 = load %struct.nl_cb*, %struct.nl_cb** %6, align 8
  %29 = getelementptr inbounds %struct.nl_cb, %struct.nl_cb* %28, i32 0, i32 0
  store i8* %27, i8** %29, align 8
  br label %30

30:                                               ; preds = %23, %19
  store i32 0, i32* %5, align 4
  br label %31

31:                                               ; preds = %30, %16
  %32 = load i32, i32* %5, align 4
  ret i32 %32
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
